# boundless-contract

./: .all-contributorsrc  .env.deploy.example  .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  deploy_and_upgrade.sh  deploy_mainnet.sh
.cargo/: config.toml
contracts/profile/: Cargo.toml  Makefile
contracts/profile/src/: admin.rs  bootstrap.rs  credits.rs  earnings.rs  errors.rs  events.rs  idempotency.rs  lib.rs  reputation.rs  storage.rs  types.rs
contracts/profile/src/tests/: admin.rs  bootstrap.rs  common.rs  credits.rs  earnings.rs  mod.rs  reputation.rs
contracts/profile/test_snapshots/tests/admin/: accept_after_expiry_clears_and_reverts.1.json  accept_after_expiry_reverts_and_admin_must_cancel_to_prune.1.json  accept_before_timelock_reverts.1.json  apply_upgrade_after_expiry_reverts_profile.1.json  apply_upgrade_before_timelock_reverts_profile.1.json  cancel_pending_clears_proposal.1.json  cancel_with_no_pending_reverts.1.json  first_set_events_contract_succeeds.1.json  initializes_with_expected_config.1.json  migrate_marks_version_and_blocks_replay_profile.1.json  pause_and_unpause_round_trip.1.json  propose_then_accept_after_timelock_swaps_events_contract.1.json  propose_upgrade_records_pending.1.json
contracts/profile/test_snapshots/tests/bootstrap/: bootstrap_self_creates_profile_for_caller.1.json  bootstrap_self_demands_the_callers_own_auth_not_admin.1.json  bootstrap_self_is_idempotent_for_existing_profile.1.json  bootstrap_self_rejects_a_replayed_op_id.1.json
docs/: ARCHITECTURE.md  CONTRACT.md  (+9 more)
(+366 files in other folders)
