[package]
name = "boundless-profile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
# Testnet-only: zero the upgrade timelock so upgrades apply immediately for fast
# iteration. NEVER enable on mainnet — the default (feature off) keeps the full
# audit-mandated ~1-day timelock, so forgetting the flag fails safe (secure).
testnet = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
